fixed x-overflow on touch devices for now

--- a/static/scss/_animations.scss
+++ b/static/scss/_animations.scss
@@ -3,94 +3,189 @@
 #################################### */
 
 @keyframes swap_left {
-    0%, 40% {transform: translatex(0%)}
-    50% {transform: scale(0.5) translatex(27.5%) }
-    60%, 100% {transform: translatex(42.5%) }
+  0%,
+  40% {
+    transform: translatex(0%);
+  }
+  50% {
+    transform: scale(0.5) translatex(27.5%);
+  }
+  60%,
+  100% {
+    transform: translatex(42.5%);
+  }
 }
 
 @keyframes swap_right {
-    0%, 40% {transform: translatex(0%)}
-    50% {transform: scale(1.75) translatex(-15%) }
-    60%, 100% {transform: translatex(-40%) }
+  0%,
+  40% {
+    transform: translatex(0%);
+  }
+  50% {
+    transform: scale(1.75) translatex(-15%);
+  }
+  60%,
+  100% {
+    transform: translatex(-40%);
+  }
 }
 
 @keyframes fadeInUp {
-    0% {opacity: 0; transform: translatey(2rem)}
-    100% {opacity: 1; transform: translatey(0)}
+  0% {
+    opacity: 0;
+    transform: translatey(2rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translatey(0);
+  }
 }
 
 @keyframes slideInRight {
-    0% {transform: translatex(100%); opacity: 0}
-    100% {transform: translateX(0); opacity: 1}
+  0% {
+    transform: translatex(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 @keyframes slideInLeft {
-    0% {transform: translatex(-100%); opacity: 0}
-    100% {transform: translateX(0); opacity: 1}
+  0% {
+    transform: translatex(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 @keyframes slideOut {
-    0% {transform: translatex(5%)}
-  100% {transform: translatex(100%)}
+  0% {
+    transform: translate(0%, 0%);
+  }
+  70% {
+    transform: translate(0%, -50%);
+  }
+  100% {
+    transform: translate(0%, -100%);
+  }
 }
 
 @keyframes bounce {
-    from, 20%, 53%, 80%, to {
-      animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
-      transform: translate3d(0,0,0);}
-    40%, 43% {
-      animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
-      transform: translate3d(0, -30px, 0);}
-    70% {
-      animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
-      transform: translate3d(0, -15px, 0);}
-    90% {transform: translate3d(0, -4px, 0);}
+  from,
+  20%,
+  53%,
+  80%,
+  to {
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    transform: translate3d(0, 0, 0);
   }
+  40%,
+  43% {
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    transform: translate3d(0, -30px, 0);
+  }
+  70% {
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    transform: translate3d(0, -15px, 0);
+  }
+  90% {
+    transform: translate3d(0, -4px, 0);
+  }
+}
 
 // Media Queries
 
-
 @media (max-width: 1400px) {
-
-    @keyframes swap_left {
-        0%, 40% {transform: translatex(0%)}
-        50% {transform: scale(0.5) translatex(32.5%) }
-        60%, 100% {transform: translatex(52.5%) }
+  @keyframes swap_left {
+    0%,
+    40% {
+      transform: translatex(0%);
     }
-
-    @keyframes swap_right {
-        0%, 40% {transform: translatex(0%)}
-        50% {transform: scale(1.75) translatex(-20%) }
-        60%, 100% {transform: translatex(-50%) }
+    50% {
+      transform: scale(0.5) translatex(32.5%);
     }
+    60%,
+    100% {
+      transform: translatex(52.5%);
+    }
+  }
+
+  @keyframes swap_right {
+    0%,
+    40% {
+      transform: translatex(0%);
+    }
+    50% {
+      transform: scale(1.75) translatex(-20%);
+    }
+    60%,
+    100% {
+      transform: translatex(-50%);
+    }
+  }
 }
 
 @media (max-width: 770px) {
-
-    @keyframes swap_left {
-        0%, 40% {transform: translatex(0%)}
-        50% {transform: scale(0.5) translatex(52.5%) }
-        60%, 100% {transform: translatex(77.5%) }
+  @keyframes swap_left {
+    0%,
+    40% {
+      transform: translatex(0%);
     }
-
-    @keyframes swap_right {
-        0%, 40% {transform: translatex(0%)}
-        50% {transform: scale(1.75) translatex(-30%) }
-        60%, 100% {transform: translatex(-70%) }
+    50% {
+      transform: scale(0.5) translatex(52.5%);
     }
+    60%,
+    100% {
+      transform: translatex(77.5%);
+    }
+  }
+
+  @keyframes swap_right {
+    0%,
+    40% {
+      transform: translatex(0%);
+    }
+    50% {
+      transform: scale(1.75) translatex(-30%);
+    }
+    60%,
+    100% {
+      transform: translatex(-70%);
+    }
+  }
 }
 
 @media (max-width: 480px) {
-
-        @keyframes swap_left {
-            0%, 40% {transform: translatex(0%)}
-            50% {transform: scale(0.5) translatex(52.5%) }
-            60%, 100% {transform: translatex(110%) }
-        }
-
-        @keyframes swap_right {
-            0%, 40% {transform: translatex(0%)}
-            50% {transform: scale(1.75) translatex(-40%) }
-            60%, 100% {transform: translatex(-100%) }
-        }
+  @keyframes swap_left {
+    0%,
+    40% {
+      transform: translatex(0%);
     }
+    50% {
+      transform: scale(0.5) translatex(52.5%);
+    }
+    60%,
+    100% {
+      transform: translatex(110%);
+    }
+  }
+
+  @keyframes swap_right {
+    0%,
+    40% {
+      transform: translatex(0%);
+    }
+    50% {
+      transform: scale(1.75) translatex(-40%);
+    }
+    60%,
+    100% {
+      transform: translatex(-100%);
+    }
+  }
+}
